# EmbeddingServer

./: .gitignore  Cargo.toml  README.md  config.toml  embeddingmodels.toml
src/: lib.rs  main.rs
src/models/: config.rs  manager.rs  mod.rs  model.rs  registry.rs
src/onnx/: mod.rs  onnx_engine.rs
src/protocol/: http.rs  mod.rs
src/server/: config.rs  hyper_server.rs  mod.rs  server.rs
